@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Net-DNS
-version:      0.59
+version:      0.59_1
 version_from: lib/Net/DNS.pm
 installdirs:  site
 requires:
@@ -9,7 +9,7 @@ requires:
     Digest::MD5:                   2.12
     IO::Socket:                    0
     MIME::Base64:                  2.11
-    Net::IP:                       1.2
+    Net::IP:                       0
     Test::More:                    0.18
 
 distribution_type: module
